closed for the day

--- a/features.html
+++ b/features.html
@@ -22,7 +22,7 @@
     <button class="inviteBtn">Get an invite</button>
   </header>
 
-  <div class="heroFeatures">
+  <div class="heroFeatures hero">
     <div class="heroText features-heroText">
       <h1>Features</h1>
       <p>We make sure all of our features are designed to be loved by every aspiring and even professional photograpers who wanted to share their stories.</p>
