--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 
   <div class="sectionOne">
-    <div class="textBox textBox1">
+    <div class="heroText home-heroText">
       <h1>Create and share your photo Stories</h1>
       <p>Photosnap is a platform for photographers and visual storytellers. We make it easy to share photos, tell stories and connect with others.</p>
       <div class="inviteLink">
@@ -37,7 +37,7 @@
 
   <div class="sectionTwo">
     <img src="/assets/home/desktop/beautiful-stories.jpg" alt="" class="imgTwo homeImg">
-    <div class="textBox textBox2">
+    <div class="textBox">
       <h1>Beautiful stories every time</h1>
       <p>We provide design templates to ensure your stories look terrific. Easily add photos, text, embed maps and media from other networks. Then share your story with everyone.</p>
       <div class="viewLink">
@@ -48,7 +48,7 @@
   </div>
 
   <div class="sectionThree">
-    <div class="textbox textbox3">
+    <div class="textbox">
       <h1>Designed for everyone</h1>
       <p>Photosnap can help you create stories that resonate with your audience. Our tool is designed for photographers of all levels, brands, businesses you name it. </p>
       <div class="viewLink">
