--- a/pricing.html
+++ b/pricing.html
@@ -9,68 +9,169 @@
   <title>Frontend Mentor | Photosnap Website Challenge</title>
 </head>
 <body>
+  <header>
+    <img src="./assets/shared/desktop/logo.svg" alt="Logo">
+    <nav>
+      <ul>
+        <li><a href="#"></a>Stories</li>
+        <li><a href="#"></a>Features</li>
+        <li><a href="#"></a>Pricing</li>
+      </ul>
+    </nav>
+    <button class="inviteBtn">Get an invite</button>
+  </header>
 
-  Stories
-  Features
-  Pricing
+  <div class="heroPricing hero">
+    <div class="heroText pricing-heroText">
+      <h1>Pricing</h1>
+      <p>Create a your stories, Photosnap is a platform for photographers and visual storytellers. It’s the simple way to create and share your photos.</p>
+    </div>
+    <img src="./assets/pricing/desktop/hero.jpg" alt="">
+  </div>
 
-  Get an invite
+  <div class="pricing">
 
-  Pricing
+    <div class="pricingCards">
+      <div class="pricingB">
+        <h4>Basic</h4>
+        <p>Includes basic usage of our platform. Recommended for new and aspiring photographers.</p>
+        <h3>$19.00</h3>
+        <p>per month</p>
+        <button>Pick Plan</button>
+      </div>
+      <div class="pricingPro">
+        <h4>Pro</h4>
+        <p>More advanced features available. Recommended for photography veterans and professionals.</p>
+        <h3>$39.00</h3>
+        <p>per month</p>
+        <button>Pick Plan</button>
+      </div>
+      <div class="pricingB">
+        <h4>Business</h4>
+        <p>Additional features available such as more detailed metrics. Recommended for business owners.</p>
+        <h3>$99.00</h3>
+        <p>per month</p>
+        <button>Pick Plan</button>
+      </div>
+    </div>
+    
+  </div>
 
-  Create a your stories, Photosnap is a platform for photographers and visual storytellers. 
-  It’s the simple way to create and share your photos.
+  <div class="comparison">
+    <h2>Compare</h2>
 
-  Monthly
+    <table>
+      <tr>
+        <th>The Features</th>
+        <th>Basic</th>
+        <th>Pro</th>
+        <th>Business</th>
+      </tr>
+      <tr>
+        <td>Unlimited Story Posting</td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+      </tr>
+      <tr>
+        <td>Unlimited Photo Upload</td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+      </tr>
+      <tr>
+        <td>Embedding Custom Content</td>
+        <td></td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+      </tr>
+      <tr>
+        <td>Customize Metadata</td>
+        <td></td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+      </tr>
+      <tr>
+        <td>Advanced Metrics</td>
+        <td></td>
+        <td></td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+      </tr>
+      <tr>
+        <td>Photo Downloads</td>
+        <td></td>
+        <td></td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+      </tr>
+      <tr>
+        <td>Search Engine Indexing</td>
+        <td></td>
+        <td></td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+      </tr>
+      <tr>
+        <td>Custom Analytics</td>
+        <td></td>
+        <td></td>
+        <td><img src="./assets/pricing/desktop/check.svg" alt=""></td>
+      </tr>
+    </table>
+  </div>
+ 
+  <div class="footerBanner">
+    <h1>We're in Beta. Get your invite today!</h1>
+    <div class="inviteLink"><a href="#" >get an invite</a> <img src="./assets/shared/desktop/arrow.svg" alt=""></div>
+  </div>
+
+  <footer>
+    <img src="./assets/shared/desktop/logowhite.svg" alt="" class="logoWhite">
+    <nav class="footerNav">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Stories</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Pricing</a></li>
+      </ul>
+    </nav>
+    <div class="socialLinks">
+      <img src="./assets/shared/desktop/facebook.svg" alt="" class="facebook">
+      <img src="./assets/shared/desktop/youtube.svg" alt="" class="youtube">
+      <img src="./assets/shared/desktop/twitter.svg" alt="" class="twitter">
+      <img src="./assets/shared/desktop/pinterest.svg" alt="" class="pinterest">
+      <img src="./assets/shared/desktop/instagram.svg" alt="" class="instagram">
+    </div>
+    <div class="inviteLink"><a href="#" >get an invite</a> <img src="./assets/shared/desktop/arrow.svg" alt=""></div>
+    <p>Copyright 2019. All Rights Reserved</p>
+  </footer>
+
+  
+  
+  
+  
+
+  
+
+    <!-- Monthly
   Yearly
 
   Basic
-  Includes basic usage of our platform. Recommended for new and aspiring photographers.
-  $19.00 per month
+  
+   
   $190.00 per year
-  Pick Plan
+  
 
   Pro
-  More advanced features available. Recommended for photography veterans and professionals.
-  $39.00 per month
+  
+  per month
   $390.00 per year
   Pick Plan
 
-  Business
-  Additional features available such as more detailed metrics. Recommended for business owners.
-  $99.00 per month
-  $990.00 per year
-  Pick Plan
-
-  Compare
-
-  The Features
-
-  Basic
-  Pro
-  Business
-
-  Unlimited Story Posting
-  Unlimited Photo Upload
-  Embedding Custom Content
-  Customize Metadata
-  Advanced Metrics
-  Photo Downloads
-  Search Engine Indexing
-  Custom Analytics
-
-  We're in Beta. Get your invite today!
   
-  Get an invite
+  
+   per month
+  $990.00 per year
+  Pick Plan -->
 
-  Home
-  Stories
-  Features
-  Pricing
-
-  Get an invite
-
-  Copyright 2019. All Rights Reserved
 
 </body>
 </html>
