prior to the SASS changes

--- a/pricing.html
+++ b/pricing.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/app.css">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
@@ -14,12 +15,12 @@
     <img src="./assets/shared/desktop/logo.svg" alt="Logo">
     <nav>
       <ul>
-        <li><a href="#"></a>Stories</li>
-        <li><a href="#"></a>Features</li>
-        <li><a href="#"></a>Pricing</li>
+        <li class="mainNavLink"><a href="#">Stories</a></li>
+        <li class="mainNavLink"><a href="#">Features</a></li>
+        <li class="mainNavLink"><a href="#">Pricing</a></li>
       </ul>
     </nav>
-    <button class="inviteBtn">Get an invite</button>
+    <button class="btn1">Get an invite</button>
   </header>
 
   <div class="heroPricing hero">
@@ -27,7 +28,7 @@
       <h1>Pricing</h1>
       <p>Create a your stories, Photosnap is a platform for photographers and visual storytellers. It’s the simple way to create and share your photos.</p>
     </div>
-    <img src="./assets/pricing/desktop/hero.jpg" alt="">
+    <img src="./assets/pricing/desktop/hero.jpg" alt="" class="image imageSide">
   </div>
 
   <div class="pricing">
