--- a/stories.html
+++ b/stories.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/app.css">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
@@ -16,12 +16,12 @@
     <img src="./assets/shared/desktop/logo.svg" alt="Logo">
     <nav>
       <ul>
-        <li><a href="#"></a>Stories</li>
-        <li><a href="#"></a>Features</li>
-        <li><a href="#"></a>Pricing</li>
+        <li class="mainNavLink"><a href="#">Stories</a></li>
+        <li class="mainNavLink"><a href="#">Features</a></li>
+        <li class="mainNavLink"><a href="#">Pricing</a></li>
       </ul>
     </nav>
-    <button class="inviteBtn">Get an invite</button>
+    <button class="btn1">Get an invite</button>
   </header>
 
   <div class="heroStories">
