first commit since scss major change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/app.css">
+  <link rel="stylesheet" href="./stylesheets/main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Photosnap Website Challenge</title>
@@ -14,7 +14,7 @@
   <header>
     <img src="./assets/shared/desktop/logo.svg" alt="Logo">
     <nav>
-      <ul>
+      <ul class="mainNav">
         <li class="mainNavLink"><a href="#">Stories</a></li>
         <li class="mainNavLink"><a href="#">Features</a></li>
         <li class="mainNavLink"><a href="#">Pricing</a></li>
@@ -47,7 +47,7 @@
     </div>
 
     <div class="sectionThree">
-      <div class="textbox">
+      <div class="textBox">
         <h1>Designed for everyone</h1>
         <p>Photosnap can help you create stories that resonate with your audience. Our tool is designed for photographers of all levels, brands, businesses you name it. </p>
         <div class="link">
@@ -132,15 +132,30 @@
       <img src="./assets/shared/desktop/logowhite.svg" alt="" class="logoWhite">
 
       <div class="socialLinks">
-        <img src="./assets/shared/desktop/facebook.svg" alt="" class="facebook">
-        <img src="./assets/shared/desktop/youtube.svg" alt="" class="youtube">
-        <img src="./assets/shared/desktop/twitter.svg" alt="" class="twitter">
-        <img src="./assets/shared/desktop/pinterest.svg" alt="" class="pinterest">
-        <img src="./assets/shared/desktop/instagram.svg" alt="" class="instagram">
+        <div class="facebook">
+          <img src="./assets/shared/desktop/facebook.svg" alt="" class="facebookCO">
+          <img src="./assets/shared/desktop/facebookBW.svg" alt="" class="facebookBW">
+        </div>
+        <div class="youtube">
+          <img src="./assets/shared/desktop/youtube.svg" alt="" class="youtubeCO">
+          <img src="./assets/shared/desktop/youtubeBW.svg" alt="" class="youtubeBW">
+        </div>
+        <div class="twitter">
+          <img src="./assets/shared/desktop/twitter.svg" alt="" class="twitterCO">
+          <img src="./assets/shared/desktop/twitterBW.svg" alt="" class="twitterBW">
+        </div>
+        <div class="pinterest">
+          <img src="./assets/shared/desktop/pinterest.svg" alt="" class="pinterestCO">
+          <img src="./assets/shared/desktop/pinterestBW.svg" alt="" class="pinterestBW">
+        </div>
+        <div class="instagram">
+          <img src="./assets/shared/desktop/instagram.svg" alt="" class="instagramCO">
+          <img src="./assets/shared/desktop/instagramBW.svg" alt="" class="instagramBW">
+        </div>
       </div>
     </div>
-    <nav class="footerNav">
-      <ul>
+    <nav >
+      <ul class="footerNav">
         <li><a href="#">Home</a></li>
         <li><a href="#">Stories</a></li>
         <li><a href="#">Features</a></li>
