page stories layout done

--- a/stories.html
+++ b/stories.html
@@ -15,7 +15,7 @@
   <header>
     <img src="./assets/shared/desktop/logo.svg" alt="Logo">
     <nav>
-      <ul>
+      <ul class="mainNav">
         <li class="mainNavLink"><a href="#">Stories</a></li>
         <li class="mainNavLink"><a href="#">Features</a></li>
         <li class="mainNavLink"><a href="#">Pricing</a></li>
@@ -25,178 +25,181 @@
   </header>
 
   <div class="heroStories">
-    <p class="featured">Last month's featured story</p>
-    <h1 class="storyTitle">Hazy full moon of Appalachia</h1>
-    <p class="titleDate"> March 2nd 2020 <span>by John Appleseed</span></p>
-    <p class="storyDescription">The dissected plateau area, while not actually made up of geological mountains, is popularly called "mountains," especially in eastern Kentucky and West Virginia, and while the ridges are not high, the terrain is extremely rugged.</p>
-    <div class="readLink readLinkTitle">
-      <a href="#">Read Story</a>
-      <img src="./assets/shared/desktop/arrow.svg" alt="">
+    <div class="storiesHeroText">
+      <p class="featured">Last month's featured story</p>
+      <h1 class="storyTitle">Hazy full moon of Appalachia</h1>
+      <p class="titleDate"> March 2nd 2020 <span> by John Appleseed</span></p>
+      <p class="storyDescription">The dissected plateau area, while not actually made up of geological mountains, is popularly called "mountains," especially in eastern Kentucky and West Virginia, and while the ridges are not high, the terrain is extremely rugged.</p>
+      <div class="readLink readLinkTitle">
+        <a href="#">Read Story</a>
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
+      </div>
     </div>
+    
   </div>
 
-  <div class="storyCards">
+  <div class="imgCards">
     
-    <div class="imgCard">
+    <div class="imgCard imgCard1">
       <p class="imgDate">April 16th 2020</p>
       <h4>The Mountains</h4>
       <p>by John Appleseed</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard2">
       <p class="imgDate">April 14th 2020</p>
       <h4>Sunset Cityscapes</h4>
       <p>by Benjamin Cruz</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard3">
       <p class="imgDate">April 11th 2020</p>
       <h4>18 Days Voyage</h4>
       <p>by Alexei Borodin</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard4">
       <p class="imgDate">April 9th 2020</p>
       <h4>Architecturals</h4>
       <p>by Samantha Brooke</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard5">
       <p class="imgDate">April 7th 2020</p>
       <h4>World Tour 2019</h4>
       <p>by Timothy Wagner</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard6">
       <p class="imgDate">April 3rd 2020</p>
       <h4>Unforeseen Corners</h4>
       <p>by William Malcolm</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard7">
       <p class="imgDate">March 29th 2020</p>
       <h4>King on Africa: Part II</h4>
       <p>by Tim Hillenburg</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard8">
       <p class="imgDate">March 21st 2020</p>
       <h4>The Trip to Nowhere</h4>
       <p>by Felicia Rourke</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
 
-    <div class="imgCard">
+    <div class="imgCard imgCard9">
       <p class="imgDate">March 19th 2020</p>
       <h4>Rage of The Sea</h4>
       <p>by Mohammed Abdul</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard10">
       <p class="imgDate">March 16th 2020</p>
       <h4>Running Free</h4>
       <p>by Michelle</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard11">
       <p class="imgDate">March 11th 2020</p>
       <h4>Behind the Waves</h4>
       <p>by Lamarr Wilson</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard12">
       <p class="imgDate">March 9th 2020</p>
       <h4>Calm Waters</h4>
       <p>by Samantha Brooke</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
 
-    <div class="imgCard">
+    <div class="imgCard imgCard13" >
       <p class="imgDate">March 5th 2020</p>
       <h4>The Milky Way</h4>
       <p>by Benjamin Cruz</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard14">
       <p class="imgDate">March 4th 2020</p>
       <h4>Night at The Dark Forest</h4>
       <p>by  Mohammed Abdul</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard15">
       <p class="imgDate">March 1st 2020</p>
       <h4>Somwarpet’s Beauty</h4>
       <p>by Michelle</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
-    <div class="imgCard">
+    <div class="imgCard imgCard16">
       <p class="imgDate">February 25th 2020</p>
       <h4>Land of Dreams</h4>
       <p>by William Malcolm</p>
-      <div class="hr"></div>
-      <div class="readLink">
+      <hr>
+      <div class="link">
         <a href="#">Read Story</a>
-        <img src="./assets/shared/desktop/arrow.svg" alt="">
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
 
