--- a/features.html
+++ b/features.html
@@ -15,7 +15,7 @@
   <header>
     <img src="./assets/shared/desktop/logo.svg" alt="Logo">
     <nav>
-      <ul>
+      <ul class="mainNav">
         <li class="mainNavLink"><a href="#">Stories</a></li>
         <li class="mainNavLink"><a href="#">Features</a></li>
         <li class="mainNavLink"><a href="#">Pricing</a></li>
@@ -33,7 +33,54 @@
   </div>
 
   <div class="featuresSection">
-    <div class="featureMain feature">
+    
+    <div class="responsive">    
+      <img src="./assets/features/desktop/responsive.svg" alt="" class="">
+    </div>
+    <div class="noLimit">
+      <img src="./assets/features/desktop/no-limit.svg" alt="" class="noLimit">
+    </div>
+    <div class="embed">
+      <img src="./assets/features/desktop/embed.svg" alt="" class="embed">
+    </div>
+
+    <div class="featureHome feature">
+      <h3>100% Responsive</h3>
+      <p>No matter which the device you’re on, our site is fully responsive and stories look beautiful on any screen.</p>
+    </div>
+    <div class="featureHome feature">
+      
+      <h3>No Photo Upload Limit</h3>
+      <p>Our tool has no limits on uploads or bandwidth. Freely upload in bulk and share all of your stories in one go.</p>
+    </div>
+    <div class="featureHome feature">
+      <h3>Available to Embed</h3>
+      <p> Embed Tweets, Facebook posts, Instagram media, Vimeo or YouTube videos, Google Maps, and more.</p>
+    </div>
+
+    <div class="domain">
+      <img src="./assets/features/desktop/custom-domain.svg" alt="">
+    </div>
+    <div class="exposure">
+      <img src="./assets/features/desktop/boost-exposure.svg" alt="">
+    </div>
+    <div class="drag-drop">
+      <img src="./assets/features/desktop/drag-drop.svg" alt="">
+    </div>
+
+    <div class="featureHome feature">
+      <h3>Custom Domain</h3>
+      <p>With Photosnap subscriptions you can host your stories on your own domain. You can also remove our branding!</p>
+    </div>
+    <div class="featureHome feature">
+      <h3>Boost Your Exposure</h3>
+      <p>Users that viewed your story or gallery can easily get notifed of new and featured stories with our built in mailing list.</p>
+    </div>
+    <div class="featureHome feature">
+      <h3>Drag & Drop Image</h3>
+      <p>Easily drag and drop your image and get beautiful shots everytime. No over the top tooling to add friction to creating stories.</p>
+    </div>
+    <!-- <div class="featureMain feature">
       <img src="./assets/features/desktop/no-limit.svg" alt="">
       <h3>100% Responsive</h3>
       <p>No matter which the device you’re on, our site is fully responsive and stories look beautiful on any screen.</p>
@@ -62,12 +109,15 @@
       <img src="./assets/features/desktop/drag-drop.svg" alt="">
       <h3>Drag & Drop Image</h3>
       <p>Easily drag and drop your image and get beautiful shots everytime. No over the top tooling to add friction to creating stories.</p>
-    </div>
+    </div> -->
   </div>
 
   <div class="footerBanner">
     <h1>We're in Beta. Get your invite today!</h1>
-    <div class="inviteLink"><a href="#" >get an invite</a> <img src="./assets/shared/desktop/arrow.svg" alt=""></div>
+    <div class="link">
+      <a href="#" >get an invite</a> 
+      <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
+    </div>
   </div>
 
   <footer>
