--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
   </div>
 
-  <div class="sectionFive">
+  <div class="featuresSection">
     <div class="responsive">    
       <img src="./assets/features/desktop/responsive.svg" alt="" class="">
     </div>
