--- a/pricing.html
+++ b/pricing.html
@@ -32,9 +32,10 @@
   </div>
 
   <div class="pricing">
-
+    <div class="toggle">
+    </div>
     <div class="pricingCards">
-      <div class="pricingB">
+      <div class="pricingB price1">
         <h4>Basic</h4>
         <p>Includes basic usage of our platform. Recommended for new and aspiring photographers.</p>
         <h3>$19.00</h3>
@@ -48,7 +49,7 @@
         <p>per month</p>
         <button>Pick Plan</button>
       </div>
-      <div class="pricingB">
+      <div class="pricingB price2">
         <h4>Business</h4>
         <p>Additional features available such as more detailed metrics. Recommended for business owners.</p>
         <h3>$99.00</h3>
@@ -122,7 +123,10 @@
  
   <div class="footerBanner">
     <h1>We're in Beta. Get your invite today!</h1>
-    <div class="inviteLink"><a href="#" >get an invite</a> <img src="./assets/shared/desktop/arrow.svg" alt=""></div>
+    <div class="link">
+      <a href="#" >get an invite</a> 
+      <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
+    </div>
   </div>
 
   <footer>
