started tablet responsive screen

--- a/stories.html
+++ b/stories.html
@@ -13,12 +13,13 @@
 <body>
 
   <header>
-    <img src="./assets/shared/desktop/logo.svg" alt="Logo">
+    <a href="/index.html"><img src="./assets/shared/desktop/logo.svg" alt="Logo"></a>
+    
     <nav>
       <ul class="mainNav">
-        <li class="mainNavLink"><a href="#">Stories</a></li>
-        <li class="mainNavLink"><a href="#">Features</a></li>
-        <li class="mainNavLink"><a href="#">Pricing</a></li>
+        <li class="mainNavLink"><a href="/stories.html">Stories</a></li>
+        <li class="mainNavLink"><a href="/features.html">Features</a></li>
+        <li class="mainNavLink"><a href="/pricing.html">Pricing</a></li>
       </ul>
     </nav>
     <button class="btn1">Get an invite</button>
@@ -30,8 +31,8 @@
       <h1 class="storyTitle">Hazy full moon of Appalachia</h1>
       <p class="titleDate"> March 2nd 2020 <span> by John Appleseed</span></p>
       <p class="storyDescription">The dissected plateau area, while not actually made up of geological mountains, is popularly called "mountains," especially in eastern Kentucky and West Virginia, and while the ridges are not high, the terrain is extremely rugged.</p>
-      <div class="readLink readLinkTitle">
-        <a href="#">Read Story</a>
+      <div class="link">
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -46,7 +47,7 @@
       <p>by John Appleseed</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -56,7 +57,7 @@
       <p>by Benjamin Cruz</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -66,7 +67,7 @@
       <p>by Alexei Borodin</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -76,7 +77,7 @@
       <p>by Samantha Brooke</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -86,7 +87,7 @@
       <p>by Timothy Wagner</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -96,7 +97,7 @@
       <p>by William Malcolm</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -106,7 +107,7 @@
       <p>by Tim Hillenburg</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -116,7 +117,7 @@
       <p>by Felicia Rourke</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -127,7 +128,7 @@
       <p>by Mohammed Abdul</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -137,7 +138,7 @@
       <p>by Michelle</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -147,7 +148,7 @@
       <p>by Lamarr Wilson</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -157,7 +158,7 @@
       <p>by Samantha Brooke</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -168,7 +169,7 @@
       <p>by Benjamin Cruz</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -178,7 +179,7 @@
       <p>by  Mohammed Abdul</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -188,7 +189,7 @@
       <p>by Michelle</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -198,7 +199,7 @@
       <p>by William Malcolm</p>
       <hr>
       <div class="link">
-        <a href="#">Read Story</a>
+        <a href="#" class="btnW">Read Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -206,24 +207,33 @@
   </div>
 
   <footer>
-    <img src="./assets/shared/desktop/logowhite.svg" alt="" class="logoWhite">
-    <nav class="footerNav">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Stories</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Pricing</a></li>
+    <div class="logoNav">
+      <img src="./assets/shared/desktop/logowhite.svg" alt="" class="logoWhite">
+
+      <div class="socialLinks">
+        <img src="./assets/shared/desktop/facebook.svg" alt="" class="facebook socialLink">
+        <img src="./assets/shared/desktop/youtube.svg" alt="" class="youtube socialLink">
+        <img src="./assets/shared/desktop/twitter.svg" alt="" class="twitter socialLink">
+        <img src="./assets/shared/desktop/pinterest.svg" alt="" class="pinterest socialLink">
+        <img src="./assets/shared/desktop/instagram.svg" alt="" class="instagram socialLink">
+      </div>
+    </div>
+    <nav >
+      <ul class="footerNav">
+        <li class="footerNavLink"><a href="/index.html">Home</a></li>
+        <li class="footerNavLink"><a href="/stories.html">Stories</a></li>
+        <li class="footerNavLink"><a href="/features.html">Features</a></li>
+        <li class="footerNavLink"><a href="/pricing.html">Pricing</a></li>
       </ul>
     </nav>
-    <div class="socialLinks">
-      <img src="./assets/shared/desktop/facebook.svg" alt="" class="facebook">
-      <img src="./assets/shared/desktop/youtube.svg" alt="" class="youtube">
-      <img src="./assets/shared/desktop/twitter.svg" alt="" class="twitter">
-      <img src="./assets/shared/desktop/pinterest.svg" alt="" class="pinterest">
-      <img src="./assets/shared/desktop/instagram.svg" alt="" class="instagram">
+    <div class="rights">
+      <div class="link">
+        <a href="#" class="btnW">get an invite</a> //////
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
+      </div>
+      <p>Copyright 2019. All Rights Reserved</p>
     </div>
-    <div class="inviteLink"><a href="#" >get an invite</a> <img src="./assets/shared/desktop/arrow.svg" alt=""></div>
-    <p>Copyright 2019. All Rights Reserved</p>
+    
   </footer>
 
 
