--- a/features.html
+++ b/features.html
@@ -13,12 +13,12 @@
 <body>
 
   <header>
-    <img src="./assets/shared/desktop/logo.svg" alt="Logo">
+    <a href="/index.html"><img src="./assets/shared/desktop/logo.svg" alt="Logo"></a>
     <nav>
       <ul class="mainNav">
-        <li class="mainNavLink"><a href="#">Stories</a></li>
-        <li class="mainNavLink"><a href="#">Features</a></li>
-        <li class="mainNavLink"><a href="#">Pricing</a></li>
+        <li class="mainNavLink"><a href="/stories.html">Stories</a></li>
+        <li class="mainNavLink"><a href="/features.html">Features</a></li>
+        <li class="mainNavLink"><a href="/pricing.html">Pricing</a></li>
       </ul>
     </nav>
     <button class="btn1">Get an invite</button>
@@ -32,7 +32,7 @@
     <img src="./assets/features/desktop/hero.jpg" alt="" class="image imageSide">
   </div>
 
-  <div class="featuresSection">
+  <div class="featuredMain">
     
     <div class="responsive">    
       <img src="./assets/features/desktop/responsive.svg" alt="" class="">
@@ -115,30 +115,39 @@
   <div class="footerBanner">
     <h1>We're in Beta. Get your invite today!</h1>
     <div class="link">
-      <a href="#" >get an invite</a> 
+      <a href="#" class="btnW" >get an invite</a> //////
       <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
     </div>
   </div>
 
   <footer>
-    <img src="./assets/shared/desktop/logowhite.svg" alt="" class="logoWhite">
-    <nav class="footerNav">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Stories</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Pricing</a></li>
+    <div class="logoNav">
+      <img src="./assets/shared/desktop/logowhite.svg" alt="" class="logoWhite">
+
+      <div class="socialLinks">
+        <img src="./assets/shared/desktop/facebook.svg" alt="" class="facebook socialLink">
+        <img src="./assets/shared/desktop/youtube.svg" alt="" class="youtube socialLink">
+        <img src="./assets/shared/desktop/twitter.svg" alt="" class="twitter socialLink">
+        <img src="./assets/shared/desktop/pinterest.svg" alt="" class="pinterest socialLink">
+        <img src="./assets/shared/desktop/instagram.svg" alt="" class="instagram socialLink">
+      </div>
+    </div>
+    <nav >
+      <ul class="footerNav">
+        <li class="footerNavLink"><a href="/index.html">Home</a></li>
+        <li class="footerNavLink"><a href="/stories.html">Stories</a></li>
+        <li class="footerNavLink"><a href="/features.html">Features</a></li>
+        <li class="footerNavLink"><a href="/pricing.html">Pricing</a></li>
       </ul>
     </nav>
-    <div class="socialLinks">
-      <img src="./assets/shared/desktop/facebook.svg" alt="" class="facebook">
-      <img src="./assets/shared/desktop/youtube.svg" alt="" class="youtube">
-      <img src="./assets/shared/desktop/twitter.svg" alt="" class="twitter">
-      <img src="./assets/shared/desktop/pinterest.svg" alt="" class="pinterest">
-      <img src="./assets/shared/desktop/instagram.svg" alt="" class="instagram">
+    <div class="rights">
+      <div class="link">
+        <a href="#" class="btnW">get an invite</a> //////
+        <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
+      </div>
+      <p>Copyright 2019. All Rights Reserved</p>
     </div>
-    <div class="inviteLink"><a href="#" >get an invite</a> <img src="./assets/shared/desktop/arrow.svg" alt=""></div>
-    <p>Copyright 2019. All Rights Reserved</p>
+    
   </footer>
 
 
