--- a/features.html
+++ b/features.html
@@ -44,16 +44,16 @@
       <img src="./assets/features/desktop/embed.svg" alt="" class="embed">
     </div>
 
-    <div class="featureHome feature">
+    <div class="featureHome featureRes">
       <h3>100% Responsive</h3>
       <p>No matter which the device you’re on, our site is fully responsive and stories look beautiful on any screen.</p>
     </div>
-    <div class="featureHome feature">
+    <div class="featureHome featureLimit">
       
       <h3>No Photo Upload Limit</h3>
       <p>Our tool has no limits on uploads or bandwidth. Freely upload in bulk and share all of your stories in one go.</p>
     </div>
-    <div class="featureHome feature">
+    <div class="featureHome featureEmbed">
       <h3>Available to Embed</h3>
       <p> Embed Tweets, Facebook posts, Instagram media, Vimeo or YouTube videos, Google Maps, and more.</p>
     </div>
@@ -68,15 +68,15 @@
       <img src="./assets/features/desktop/drag-drop.svg" alt="">
     </div>
 
-    <div class="featureHome feature">
+    <div class="featureHome featureDomain">
       <h3>Custom Domain</h3>
       <p>With Photosnap subscriptions you can host your stories on your own domain. You can also remove our branding!</p>
     </div>
-    <div class="featureHome feature">
+    <div class="featureHome featureExp">
       <h3>Boost Your Exposure</h3>
       <p>Users that viewed your story or gallery can easily get notifed of new and featured stories with our built in mailing list.</p>
     </div>
-    <div class="featureHome feature">
+    <div class="featureHome featureDrag">
       <h3>Drag & Drop Image</h3>
       <p>Easily drag and drop your image and get beautiful shots everytime. No over the top tooling to add friction to creating stories.</p>
     </div>
