mobile nav in session for only stories

--- a/features.html
+++ b/features.html
@@ -29,7 +29,7 @@
       <h1>Features</h1>
       <p>We make sure all of our features are designed to be loved by every aspiring and even professional photograpers who wanted to share their stories.</p>
     </div>
-    <img src="./assets/features/desktop/hero.jpg" alt="" class="image imageSide">
+    <img src="./assets/features/desktop/hero.jpg" alt="" class="image imageSide imageFeatures">
   </div>
 
   <div class="featuredMain">
