--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
   
   <header>
     <a href="/index.html"><img src="./assets/shared/desktop/logo.svg" alt="Logo"></a>
-    <nav>
-      <ul class="mainNav">
-        <li class="mainNavLink"><a href="/stories.html">Stories</a></li>
-        <li class="mainNavLink"><a href="/features.html">Features</a></li>
-        <li class="mainNavLink"><a href="/pricing.html">Pricing</a></li>
-      </ul>
-    </nav>
-    <button class="btn1">Get an invite</button>
+    
+
+    <div>
+      <nav>
+        <ul class="mainNav">
+          <li class="mainNavLink"><a href="/stories.html">Stories</a></li>
+          <li class="mainNavLink"><a href="/features.html">Features</a></li>
+          <li class="mainNavLink"><a href="/pricing.html">Pricing</a></li>
+        </ul>
+      </nav>
+      <button class="btn1">Get an invite</button>
+    </div>
+    
   </header>
     <div class="sectionOne">
       <div class="heroText home-heroText">
