before the Nav change

--- a/stories.html
+++ b/stories.html
@@ -33,13 +33,16 @@
   </header>
 
   <div class="heroStories">
+    <div class="bgHero">
+      <!-- <img src="./assets/stories/desktop/moon-of-appalacia.jpg" alt=""> -->
+    </div>
     <div class="storiesHeroText">
       <p class="featured">Last month's featured story</p>
       <h1 class="storyTitle">Hazy full moon of Appalachia</h1>
       <p class="titleDate"> March 2nd 2020 <span> by John Appleseed</span></p>
       <p class="storyDescription">The dissected plateau area, while not actually made up of geological mountains, is popularly called "mountains," especially in eastern Kentucky and West Virginia, and while the ridges are not high, the terrain is extremely rugged.</p>
-      <div class="link">
-        <a href="#" class="btnW">Read Story</a>
+      <div class="link spaceLink">
+        <a href="#" class="btnW">Read the Story</a>
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
     </div>
@@ -234,8 +237,8 @@
       </ul>
     </nav>
     <div class="rights">
-      <div class="link">
-        <a href="#" class="btnW">get an invite</a> //////
+      <div class="link spaceLink">
+        <a href="#" class="btnW">get an invite</a> 
         <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
       </div>
       <p>Copyright 2019. All Rights Reserved</p>
