toggle price switch done

--- a/features.html
+++ b/features.html
@@ -125,7 +125,7 @@
 
   <div class="footerBanner">
     <h1>We're in Beta. Get your invite today!</h1>
-    <div class="link spaceLink">
+    <div class="link bannerLink">
       <a href="#" class="btnW" >get an invite</a> 
       <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
     </div>
