--- a/pricing.html
+++ b/pricing.html
@@ -43,13 +43,19 @@
   </div>
 
   <div class="pricing">
-    <div class="toggle">
+    <div class="priceHead">
+      <h3>Monthly</h3>
+      <label class="switch">
+        <input type="checkbox"  id='checkbox'>
+        <span class="slider round"></span>
+      </label>
+      <h3>Yearly</h3>
     </div>
     <div class="pricingCards">
       <div class="pricingB price1 priceCard">
         <h2>Basic</h2>
         <p>Includes basic usage of our platform. Recommended for new and aspiring photographers.</p>
-        <div class="charge">
+        <div class="charge plan1">
           <h1>$19.00</h1>
           <p>per month</p>
         </div>
@@ -59,7 +65,7 @@
       <div class="pricingPro priceCard">
         <h2>Pro</h2>
         <p>More advanced features available. Recommended for photography veterans and professionals.</p>
-        <div class="charge">
+        <div class="charge plan2">
           <h1>$39.00</h1>
           <p>per month</p>
         </div>
@@ -69,9 +75,9 @@
       <div class="pricingB price2 priceCard">
         <h2>Business</h2>
         <p>Additional features available such as more detailed metrics. Recommended for business owners.</p>
-        <div class="charge">
+        <div class="charge plan3">
           <h1>$99.00</h1>
-        <p>per month</p>
+          <p>per month</p>
         </div>
         
         <button class="btn1">Pick Plan</button>
@@ -143,7 +149,7 @@
  
   <div class="footerBanner">
     <h1>We're in Beta. Get your invite today!</h1>
-    <div class="link spaceLink">
+    <div class="link bannerLink">
       <a href="#" class="btnW">get an invite</a>  
       <img src="./assets/shared/desktop/arrowWhite.svg" alt="">
     </div>
